crash: avoid newer String APIs in legacy diagnostic path